--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
+    "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
