--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -47,6 +47,7 @@
     "cron": "^4.3.0",
     "dotenv": "^16.4.7",
     "esbuild": "^0.25.0",
+    "express": "^4.21.2",
     "glob": "^11.0.1",
     "inquirer": "^8.2.5",
     "table": "^6.9.0",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@amplitude/analytics-types": "^2.9.2",
     "@types/archiver": "^6.0.3",
+    "@types/express": "^5.0.3",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
