--- a/packages/workbench/package.json
+++ b/packages/workbench/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react18-json-view": "^0.2.9",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
