feat: workbench redesign (#396)

--- a/packages/workbench/package.json
+++ b/packages/workbench/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@motiadev/stream-client-react": "workspace:*",
+    "@motiadev/ui": "workspace:*",
     "@radix-ui/react-collapsible": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -32,14 +33,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dagre": "^0.8.5",
-    "fast-deep-equal": "^3.1.3",
     "date-fns": "^4.1.0",
+    "fast-deep-equal": "^3.1.3",
     "json-schema": "^0.4.0",
     "lucide-react": "^0.510.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
