--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,26 +42,28 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.523.0",
+    "lucide-react": "^0.525.0",
+    "react-resizable-panels": "^3.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^9.0.13",
-    "@storybook/addon-docs": "^9.0.13",
-    "@storybook/addon-themes": "^9.0.13",
-    "@storybook/react": "^9.0.13",
-    "@storybook/react-vite": "^9.0.13",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-themes": "^9.0.15",
+    "@storybook/react": "^9.0.15",
+    "@storybook/react-vite": "^9.0.15",
     "@storybook/test-runner": "^0.23.0",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "concurrently": "^9.2.0",
-    "storybook": "^9.0.13",
-    "tailwindcss": "^4.1.10",
+    "storybook": "^9.0.15",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4",
-    "wait-on": "^8.0.3"
+    "wait-on": "^8.0.3",
+    "husky": "^9.0.11"
   }
 }
