chore: ignoring pipline to contributors path

--- a/.github/workflows/motia.yml
+++ b/.github/workflows/motia.yml
@@ -9,6 +9,7 @@ on:
       - main
     paths-ignore:
       - 'docs/**'
+      - 'contributors/**'
       - 'packages/docs/**'
   push:
     branches:
